# OpoTests

./: .gitignore  Dockerfile  README.md  comprueba_versiones_python.yml  iv.yaml  pyproject.toml  tasks.py
.github/workflows/: actualiza_docker.yml  test.yml
.semaphore/: semaphore.yml
docs/: justificacion_eleccion_framework_test.md  justificacion_eleccion_lenguaje.md  justificacion_gestor_dependencias.md  justificacion_gestor_tareas.md  justificacion_imagen_docker.md  milestones.md  notas_CI.md  notas_desarrollo.md  tipos_de_usuario.md
opotests/: Oposicion.py  Pregunta.py  Tema.py  dificultad.py  examen.py  grupo.py  oposicion.py  pregunta.py  tema.py
src/: oposicion.py
test/: conftest.py  importar.py  oposiciones.txt  opotests_utils.py  preguntas.txt  prueba.py  test_examenes.py  test_oposiciones.py  test_preguntas.py
